--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "native-base": "^2.7.2",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
+    "react-navigation": "^2.12.1"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
